--- a/package.json
+++ b/package.json
@@ -16,13 +16,23 @@
     "node",
     "real-time"
   ],
-  "author": "Arnout Kazemier",
+  "author": {
+    "name": "Arnout Kazemier"
+  },
   "license": "MIT",
   "dependencies": {
     "jsdom": "~0.6.5",
-    "ws": "~0.4.27"
+    "ws": "~0.4.27",
+    "xmlhttprequest": "1.6.x"
   },
   "devDependencies": {
     "sockjs": "~0.3.7"
-  }
+  },
+  "readme": "# sockjs-client-node\n\nThis a small wrapper around the `sockjs-client` framework that was designed for\nbrowsers. It wraps it in to a `jsdom` environment and adds some `WebSocket`\nmagic to make it go fast.\n\n#### Installation\n\n```\nnpm install sockjs-client-node\n```\n\n#### API\n\n```js\nvar SockJS = require('sockjs-client-node');\n\n//\n// The API is exactly the same as the regular sockjs client.\n//\n```\n\n#### License\n\nMIT\n",
+  "readmeFilename": "README.md",
+  "bugs": {
+    "url": "https://github.com/3rd-Eden/sockjs-client-node/issues"
+  },
+  "_id": "sockjs-client-node@0.0.0",
+  "_from": "sockjs-client-node@0.0.0"
 }
